[workspace]
members = [".", "libs/*"]

[package]
name = "ublog"
version = "0.1.0"
authors = ["Sirui Mu <msrlancern@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.24", features = ["std"], default-features = false }
spdlog-rs = "0.2.4"
structopt = { version = "0.3.26", features = ["default", "color", "suggestions"] }
tokio = { version = "1.21.2", features = ["rt-multi-thread"] }
ublog-data = { path = "libs/ublog-data", features = ["remote-storage"] }
ublog-notion = { path = "libs/ublog-notion" }
