[workspace]
members = [".", "libs/*"]

[package]
name = "ublog"
version = "0.1.0"
authors = ["Sirui Mu <msrlancern@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
dirs = "4.0.0"
futures = { version = "0.3.24", features = ["std"], default-features = false }
http = "0.2.8"
hyper = "0.14.20"
rss = "2.0.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
spdlog-rs = { version = "0.2.4", features = ["log"] }
structopt = { version = "0.3.26", features = ["default", "color", "suggestions"] }
time = { version = "0.3.15", features = ["formatting"] }
tokio = { version = "1.21.2", features = ["fs", "rt-multi-thread"] }
tower-http = { version = "0.3.4", features = ["cors"] }
ublog-data = { path = "libs/ublog-data", features = ["remote-storage"] }
ublog-doc = { path = "libs/ublog-doc" }
ublog-notion = { path = "libs/ublog-notion" }
uuid = "1.1.2"
