[package]
name = "ublog-data"
version = "0.1.0"
authors = ["Sirui Mu <msrlancern@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
lazy_static = "1.4.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.144", features = ["derive"] }
time = "0.3.13"
