[package]
name = "ublog-data"
version = "0.1.0"
authors = ["Sirui Mu <msrlancern@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
bson = "2.4.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.144", features = ["derive"] }
sha2 = "0.10.5"
time = "0.3.13"
ublog-doc = { path = "../ublog-doc" }

[features]
remote-storage = []
default = []
