[package]
name = "ublog-models"
version = "0.1.0"
authors = ["Sirui Mu <msrlancern@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.143", optional = true, features = ["derive"] }
time = { version = "0.3.13", optional = true }

[features]
default = ["serde", "time"]
