[package]
name = "ublog-notion"
version = "0.1.0"
authors = ["Sirui Mu <msrlancern@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.0"
futures = { version = "0.3.24", features = ["std"], default-features = false }
html-escape = "0.2.11"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
time = { version = "0.3.14", features = ["parsing"] }
tokio = { version = "1.20.1", features = ["time"] }
ublog-data = { path = "../ublog-data" }
ublog-doc = { path = "../ublog-doc" }
url = "2.3.1"
uuid = { version = "1.1.2", features = ["v4"] }
